--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.3.27",
     "lucide-react": "^0.417.0",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
